crates/biome_cli/tests/snapshots/main_cases_linter_domains/does_disable_test_rules.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint test1.js test2.js
```

## `biome.json`

```json
{
  "linter": {
    "domains": {
      "test": "none"
    }
  }
}
```

## `test1.js`

```js
describe.only("bar", () => {});

```

## `test2.js`

```js

describe("foo", () => {
	beforeEach(() => {});
    beforeEach(() => {});
    test("bar", () => {
        someFn();
    });
});
    
```

# Emitted Messages

```block
Checked 2 files in <TIME>. No fixes applied.
```
