crates/biome_cli/tests/snapshots/main_cases_linter_domains/does_enable_test_rules_and_skip.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint test1.js test2.js --skip=suspicious/noDuplicateTestHooks
```

## `biome.json`

```json
{
  "linter": {
    "domains": {
      "test": "all"
    }
  }
}
```

## `test1.js`

```js
describe.only("bar", () => {});

```

## `test2.js`

```js

describe("foo", () => {
	beforeEach(() => {});
    beforeEach(() => {});
    test("bar", () => {
        someFn();
    });
});
    
```

# Emitted Messages

```block
test2.js:5:5 lint/style/useConsistentTestIt  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The test function test is inconsistent with the configured preferred function it.
  
    3 │ 	beforeEach(() => {});
    4 │     beforeEach(() => {});
  > 5 │     test("bar", () => {
      │     ^^^^
    6 │         someFn();
    7 │     });
  
  i Using a consistent function for tests improves readability and makes it easier to search for tests in the codebase.
  
  i Safe fix: Use it instead.
  
    3 3 │   	beforeEach(() => {});
    4 4 │       beforeEach(() => {});
    5   │ - ····test("bar",·()·=>·{
      5 │ + ····it("bar",·()·=>·{
    6 6 │           someFn();
    7 7 │       });
  

```

```block
test1.js:1:10 lint/suspicious/noFocusedTests  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! Don't focus the test.
  
  > 1 │ describe.only("bar", () => {});
      │          ^^^^
    2 │ 
  
  i The 'only' method is often used for debugging or during implementation.
  
  i Consider removing 'only' to ensure all tests are executed.
  
  i Unsafe fix: Remove focus from test.
  
    1 │ describe.only("bar",·()·=>·{});
      │         -----                  

```

```block
test2.js:5:5 lint/suspicious/useExpect ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! Test callback is missing an expect() assertion.
  
    3 │ 	beforeEach(() => {});
    4 │     beforeEach(() => {});
  > 5 │     test("bar", () => {
      │     ^^^^^^^^^^^^^^^^^^^
  > 6 │         someFn();
  > 7 │     });
      │     ^^
    8 │ });
    9 │     
  
  i Tests without assertions may pass even when the behavior is broken.
  
  i Add an assertion using expect() to verify the expected behavior.
  

```

```block
Checked 2 files in <TIME>. No fixes applied.
Found 2 warnings.
Found 1 info.
```
