crates/biome_cli/tests/snapshots/main_cases_linter_domains/full_domain_enables_all_rules.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
snapshot_kind: text
---
## `biome.json`

```json
{
  "linter": {
    "domains": {
      "full": "recommended"
    }
  }
}
```

## `test2.js`

```js

describe("foo", () => {
	beforeEach(() => {});
    beforeEach(() => {});
    test("bar", () => {
        someFn();
    });
});
    
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
test2.js:4:5 lint/suspicious/noDuplicateTestHooks ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Disallow duplicate setup and teardown hooks.
  
    2 │ describe("foo", () => {
    3 │ 	beforeEach(() => {});
  > 4 │     beforeEach(() => {});
      │     ^^^^^^^^^^^^^^^^^^^^
    5 │     test("bar", () => {
    6 │         someFn();
  
  i Disallow beforeEach duplicacy inside the describe function.
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
