crates/biome_cli/tests/snapshots/main_cases_linter_domains/skip_domain_does_not_report_unused_suppression.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --skip=test test1.js
```

## `biome.json`

```json
{
  "linter": {
    "domains": {
      "test": "all"
    }
  }
}
```

## `test1.js`

```js
// biome-ignore lint/suspicious/noFocusedTests: reason
describe.only("bar", () => {});

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
